--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,13 @@ version = "0.7.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-com = { version = "0.3", features = ["production"] }
+com = { version = "0.6.0", features = ["production"] }
 log = "^0.4"
 ndarray = { version = "^0.14", optional = true }
-proc-macro2 = "1"
-quote = "1"
+proc-macro2 = "^1"
+quote = "^1"
 syn = { version = "1", features = ["full", "extra-traits"] }
-widestring = "0.4"
+widestring = "1.2.0"
 winapi = { version = "0.3", features = ["oaidl", "combaseapi", "oleauto"] }
 
 [lib]
